--- a/index.html
+++ b/index.html
@@ -54,12 +54,42 @@
               </li>
             </ul>
             <button class="header__btn">
-              
+
             </button>
           </div>
         </div>
       </div>
     </section>
   </header>
+  <main>
+    <section>
+      <div class="container">
+        <div class="main__section">
+              <div>
+                <h2 class="main__title">
+                  super fast  Food
+                </h2>
+                <h2 class="title">
+                 service delivery
+                </h2>
+                <p class="main__text">
+                  We provide super fast-delivery service. Let’s use our <br>
+                  services right now and get discounts of up to 50%
+                </p>
+                <button class="main__btn">
+                  Explore Food
+                </button>
+                <u class="main__btn1">
+                  Download App
+                </u>
+              </div>
+              <div>
+                <img  class="main__img" src="./img/matasikldiodam.png" alt="">
+              </div>
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
 </body>
 </html>
