main qsmni sectioni boldm

--- a/index.html
+++ b/index.html
@@ -90,6 +90,78 @@
         </div>
       </div>
     </section>
+    <section>
+      <div class="container">
+        <div class="ports__section">
+          <h2 class="ports__title">
+            Our popular Category 
+          </h2>
+          <ul class="ports__list">
+            <li class="ports__item">
+              <button class="ports__btn">
+                <div>
+                  <img src="./img/burger 1.png" alt="">
+                </div>
+                <div>
+                  <h3 class="title1">
+                    Burger
+                  </h3>
+                </div>
+              </button>
+            </li>
+            <li class="ports__item">
+              <button class="ports__btn">
+                <div>
+                  <img  src="./img/burger 1.png" alt="">
+                </div>
+                <div>
+                  <h3 class="title1">
+                    Burger
+                  </h3>
+                </div>
+              </button>
+            </li>
+            <li class="ports__item">
+              <button class="ports__btn">
+                <div>
+                  <img src="./img/burger 1.png" alt="">
+                </div>
+                <div>
+                  <h3 class="title1">
+                    Burger
+                  </h3>
+                </div>
+              </button>
+            </li>
+            <li class="ports__item">
+              <button class="ports__btn">
+                <div>
+                  <img src="./img/burger 1.png" alt="">
+                </div>
+                <div>
+                  <h3 class="title1">
+                    Burger
+                  </h3>
+                </div>
+              </button>
+            </li>
+            <li class="ports__item">
+              <button class="ports__btn">
+                <div>
+                  <img src="./img/burger 1.png" alt="">
+                </div>
+                <div>
+                  <h3 class="title1">
+                    Burger
+                  </h3>
+                </div>
+              </button>
+            </li>
+
+          </ul>
+        </div>
+      </div>
+    </section>
   </main>
 </body>
 </html>
