main qsmni 3 sectioni

--- a/index.html
+++ b/index.html
@@ -162,6 +162,109 @@
         </div>
       </div>
     </section>
+    <section>
+      <div class="container">
+        <div class="run__contect">
+          <ul class="run__list">
+            <li class="run__item">
+              <div class="run__div">
+                <img class="run__img" src="./img/burger2.png" alt="">
+                <div>
+                  <img class="run__img1" src="./img/yulduz.png" alt="">
+                </div>
+                <h3 class="run__title">
+                  Cheeseburger With Salad
+                </h3>
+                <strong class="run__stron">
+                  $18.00
+                </strong>
+                <div>
+                  <button class="run__btn">
+                    Add to Cart
+                  </button>
+                </div>
+              </div>
+            </li>
+            <li class="run__item">
+              <div class="run__div">
+                <img class="run__img" src="./img/Burger3.png" alt="">
+                <div>
+                  <img class="run__img1" src="./img/yulduz.png" alt="">
+                </div>
+                <h3 class="run__title">
+                  Cheeseburger With Salad
+                </h3>
+                <strong class="run__stron">
+                  $18.00
+                </strong>
+                <div>
+                  <button class="run__btn">
+                    Add to Cart
+                  </button>
+                </div>
+              </div>
+            </li>
+            <li class="run__item">
+              <div class="run__div">
+                <img class="run__img" src="./img/burger4.png" alt="">
+                <div>
+                  <img class="run__img1" src="./img/yulduz.png" alt="">
+                </div>
+                <h3 class="run__title">
+                  Cheeseburger With Salad
+                </h3>
+                <strong class="run__stron">
+                  $18.00
+                </strong>
+                <div>
+                  <button class="run__btn">
+                    Add to Cart
+                  </button>
+                </div>
+              </div>
+            </li>
+            <li class="run__item">
+              <div class="run__div">
+                <img class="run__img" src="./img/burger5.png" alt="">
+                <div>
+                  <img class="run__img1" src="./img/yulduz.png" alt="">
+                </div>
+                <h3 class="run__title">
+                  Cheeseburger With Salad
+                </h3>
+                <strong class="run__stron">
+                  $18.00
+                </strong>
+                <div>
+                  <button class="run__btn">
+                    Add to Cart
+                  </button>
+                </div>
+              </div>
+            </li>
+            <li class="run__item">
+              <div class="run__div">
+                <img class="run__img" src="./img/burger6.png" alt="">
+                <div>
+                  <img class="run__img1" src="./img/yulduz.png" alt="">
+                </div>
+                <h3 class="run__title">
+                  Cheeseburger With Salad
+                </h3>
+                <strong class="run__stron">
+                  $18.00
+                </strong>
+                <div>
+                  <button class="run__btn">
+                    Add to Cart
+                  </button>
+                </div>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </section>
   </main>
 </body>
 </html>
